openshift/tmp-deploy/1.6-service.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-oh-service
  namespace: todo-oh
spec:
  selector:
    app: todo-oh
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 3000
  type: ClusterIP
